--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "localtunnel": "^2.0.2",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.20"
   }
 }
